frontend/src/dialog/dialog.module.css
/* ... */
.list-container .list .pod-item .pod-icon {
  -ms-grid-column: 1;
  grid-column: 1;
  padding: 20px;
}

.list-container .list .pod-item .pod-text {
  -ms-grid-column: 2;
  grid-column: 2;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  line-height: 56px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.list-container .list .pod-item .button-container {
  -ms-grid-column: 3;
  grid-column: 3;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.list-container .list .folder-item {
  -ms-grid-columns: 50px auto min-content;
      grid-template-columns: 50px auto -webkit-min-content;
      grid-template-columns: 50px auto min-content;
      grid-template-areas: 'left middle right';
  display: -ms-grid;
  display: grid;
  position: relative;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #221a33;
  background: #f5f3f9;
  -webkit-box-shadow: 0 0 2px 2px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 2px 2px rgba(42, 23, 74, 0.2);
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  border-color: #f5f3f9;
  margin: 12px 5px;
}

.list-container .list .folder-item .folder-icon {
  -ms-grid-row: 1;
  -ms-grid-row-span: 2;
  -ms-grid-column: 1;
  grid-area: left;
  padding: 14px 10px;
  height: 28px;
  width: auto;
}

.list-container .list .folder-item .folder-title {
  -ms-grid-row: 1;
  -ms-grid-column: 2;
  grid-area: middle;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 30px !important;
  padding-top: 12px;
  font-weight: 500;
}

.list-container .list .folder-item .open-folder-icon {
  -ms-grid-row: 1;
  -ms-grid-row-span: 2;
  -ms-grid-column: 3;
  grid-area: right;
  height: 24px;
  width: auto;
  padding-top: 16px;
  padding-right: 10px;
}

.list-container .list .session-item {
  -ms-grid-columns: 50px auto min-content;
      grid-template-columns: 50px auto -webkit-min-content;
      grid-template-columns: 50px auto min-content;
      grid-template-areas: 'left middle-top right' 'left middle-bottom right';
  display: -ms-grid;
  display: grid;
  position: relative;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #221a33;
  background: #f5f3f9;
  -webkit-box-shadow: 0 0 2px 2px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 2px 2px rgba(42, 23, 74, 0.2);
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  border-color: #f5f3f9;
  margin: 12px 6px;
}

.list-container .list .session-item .session-icon {
  -ms-grid-row: 1;
  -ms-grid-row-span: 2;
  -ms-grid-column: 1;
  grid-area: left;
  fill: #3a2163;
  padding: 16px 10px;
}

.list-container .list .session-item .session-title {
  -ms-grid-row: 1;
  -ms-grid-column: 2;
  grid-area: middle-top;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 30px !important;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #221a33;
}

.list-container .list .session-item .session-date {
  -ms-grid-row: 2;
  -ms-grid-column: 2;
  grid-area: middle-bottom;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 20px;
  color: #675e7d;
  padding-bottom: 2px;
}

.list-container .list .session-item .session-options {
  -ms-grid-row: 1;
  -ms-grid-row-span: 2;
  -ms-grid-column: 3;
  grid-area: right;
}

.breadcrumb-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  position: relative;
  margin-top: 5px;
}

.breadcrumb-container .crumb-name {
  color: #3a2163;
  text-overflow: ellipsis;
  max-width: 240px;
  white-space: nowrap;
  display: inline-block;
  height: 18px;
  cursor: pointer;
}

.breadcrumb-container .breadcrumb-arrow-icon {
  height: 24px;
  width: auto;
  cursor: pointer;
}

.dc-slider {
  -webkit-appearance: none;
  height: 8px;
  border-radius: 4px;
  background: #d3d3d3;
  outline: none;
  opacity: 0.7;
  -webkit-transition: .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.dc-slider:hover {
  opacity: 1;
}

.dc-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 10px;
  background: #3a2163;
  cursor: pointer;
}

.dc-slider::-moz-range-thumb {
  width: 20px;
  height: 20px;
  border-radius: 10px;
  background: #3a2163;
  cursor: pointer;
}

.dialog-container {
  position: absolute;
  padding: 24px 28px 28px;
  width: max-content;
  max-width: min(92vw, 620px);
  max-height: 80%;
  overflow-y: auto;
  top: 50%;
  -webkit-transform: translate(0, -50%);
          transform: translate(0, -50%);
  background-color: #FFFFFF;
  border-radius: 12px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  -webkit-box-shadow: 0 18px 48px -12px rgba(42, 23, 74, 0.35);
          box-shadow: inset 0 -1px 0 1px rgba(0, 0, 0, 0.5), 0 2px 8px 0 rgba(42, 23, 74, 0.2);
  opacity: 1;
}

.dialog-container-expanded {
  position: absolute;
  padding: 24px 32px 32px;
  min-width: 300px;
  max-width: 500px;
  max-height: 80%;
  overflow-y: auto;
  top: 50%;
  -webkit-transform: translate(0, -50%);
          transform: translate(0, -50%);
  background-color: #FFFFFF;
  border-radius: 8px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  -webkit-box-shadow: inset 0 -1px 0 1px rgba(0, 0, 0, 0.5), 0 2px 8px 0 rgba(42, 23, 74, 0.2);
          box-shadow: inset 0 -1px 0 1px rgba(0, 0, 0, 0.5), 0 2px 8px 0 rgba(42, 23, 74, 0.2);
  opacity: 1;
}
/* ... */

